@@ -1,8 +1,13 @@
-<Addin  id="Banshee.AlarmClock"
-        name="Alarm and Sleep Timer"
-        description="Gives Banshee alarm clock type functions."
-        url="http://code.google.com/p/banshee-unofficial-plugins/"
-        version="0.4">
+<?xml version="1.0" encoding="utf-8"?>
+<Addin
+    id="Banshee.AlarmClock"
+    version="0.4"
+    copyright="© Bertrand Lorentz, Patrick van Staveren. Licensed under the MIT X11 license."
+    name="Alarm and Sleep Timer"
+    description="Gives Banshee alarm clock type functions."
+    author="Bertrand Lorentz, Patrick van Staveren"
+    url="http://code.google.com/p/banshee-unofficial-plugins/"
+    defaultEnabled="false">
 
   <Dependencies>
     <Addin id="Banshee.Services" version="1.0"/>
