@@ -1,3 +1,7 @@
+2008-05-01  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
+
+	* src/Banshee.AlarmClock.addin.xml: Update addin metadata.
+
 2008-03-29  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
 
 	Version 0.4.0 released. Works only with banshee 0.98.2 and above. 
